--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <poi.version>4.1.2</poi.version>
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
+        <!--工作流 需要-->
+        <flowable.version>6.7.2</flowable.version>
+        <swagger.bootstrap-ui.version>1.9.6</swagger.bootstrap-ui.version>
     </properties>
 	
     <!-- 依赖声明 -->
@@ -185,6 +188,55 @@
                 <artifactId>shahenpc-common</artifactId>
                 <version>${shahenpc.version}</version>
             </dependency>
+			<!-- flowable工作流 -->
+			<dependency>
+                <groupId>com.shahenpc</groupId>
+                <artifactId>shahenpc-flowable</artifactId>
+                <version>${shahenpc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.flowable</groupId>
+                <artifactId>flowable-spring-boot-starter-basic</artifactId>
+                <version>${flowable.version}</version>
+                <exclusions><!-- 需要排除flowable的mybatis依赖，不然会跟mybatis-plus冲突 -->
+                    <exclusion>
+                        <groupId>org.mybatis</groupId>
+                        <artifactId>mybatis</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>1.6.6</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.flowable</groupId>
+                <artifactId>flowable-engine</artifactId>
+                <version>${flowable.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger.bootstrap-ui.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.5.2</version>
+            </dependency>
+            <dependency>
+                <groupId>p6spy</groupId>
+                <artifactId>p6spy</artifactId>
+                <version>3.9.1</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -196,6 +248,7 @@
         <module>shahenpc-quartz</module>
         <module>shahenpc-generator</module>
         <module>shahenpc-common</module>
+		<module>shahenpc-flowable</module>
     </modules>
     <packaging>pom</packaging>
 
