--- a/shahenpc-framework/pom.xml
+++ b/shahenpc-framework/pom.xml
@@ -32,7 +32,7 @@
         <!-- 阿里数据库连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
+              <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- 验证码 -->
@@ -52,7 +52,11 @@
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
         </dependency>
-
+        <!--工作流-->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+        </dependency>
         <!-- 系统模块-->
         <dependency>
             <groupId>com.shahenpc</groupId>
