--- a/shahenpc-system/pom.xml
+++ b/shahenpc-system/pom.xml
@@ -22,6 +22,10 @@
             <groupId>com.shahenpc</groupId>
             <artifactId>shahenpc-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
 
     </dependencies>
 
