--- a/shahenpc-admin/src/main/resources/application.yml
+++ b/shahenpc-admin/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
     # 国际化资源文件路径
     basename: i18n/messages
   profiles: 
-    active: druid
+    active: local
   # 文件上传
   servlet:
      multipart:
@@ -121,3 +121,10 @@ xss:
   excludes: /system/notice
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
+
+# flowable相关表
+flowable:
+  # true 会对数据库中所有表进行更新操作。如果表不存在，则自动创建(建议开发时使用)
+  database-schema-update: false
+  # 关闭定时任务JOB
+  async-executor-activate: false
