--- a/shahenpc-admin/src/main/resources/application-druid.yml
+++ b/shahenpc-admin/src/main/resources/application-druid.yml
@@ -1,3 +1,19 @@
+# 项目相关配置
+ruoyi:
+    # 名称
+    name: RuoYi
+    # 版本
+    version: 3.8.3
+    # 版权年份
+    copyrightYear: 2022
+    # 实例演示开关
+    demoEnabled: true
+    # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
+    profile: D:/ruoyi/uploadPath
+    # 获取ip地址开关
+    addressEnabled: false
+    # 验证码类型 math 数组计算 char 字符验证
+    captchaType: math
 # 数据源配置
 spring:
     datasource:
