沙河人大平台   预算管理 特色工作

--- a/shahenpc-admin/src/main/resources/application.yml
+++ b/shahenpc-admin/src/main/resources/application.yml
@@ -49,7 +49,7 @@ spring:
     # 端口，默认为6379
     port: 6379
     # 数据库索引
-    database: 0
+    database: 1
     # 密码
     password: 
     # 连接超时时间
@@ -94,7 +94,7 @@ swagger:
   # 是否开启swagger
   enabled: true
   # 请求前缀
-  pathMapping: /dev-api
+  pathMapping:
 
 # 防止XSS攻击
 xss: 
