--- a/shahenpc-admin/src/main/resources/application.yml
+++ b/shahenpc-admin/src/main/resources/application.yml
@@ -15,7 +15,14 @@ server:
       max: 800
       # Tomcat启动初始化的线程数，默认值10
       min-spare: 100
-
+wx:
+  miniapp:
+    configs:
+      - appid: #微信小程序的appid
+        secret: #微信小程序的Secret
+        token: #微信小程序消息服务器配置的token
+        aesKey: #微信小程序消息服务器配置的EncodingAESKey
+        msgDataFormat: JSON
 # 日志配置
 logging:
   level:
