--- a/shahenpc-common/pom.xml
+++ b/shahenpc-common/pom.xml
@@ -131,6 +131,16 @@
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
+        <!--微信 小程序-->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
