--- a/shahenpc-framework/pom.xml
+++ b/shahenpc-framework/pom.xml
@@ -34,6 +34,11 @@
             <groupId>com.alibaba</groupId>
               <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
+        <!---->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
 
         <!-- 验证码 -->
         <dependency>
