--- a/shahenpc-system/pom.xml
+++ b/shahenpc-system/pom.xml
@@ -26,7 +26,10 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>com.shahenpc</groupId>-->
+<!--            <artifactId>shahenpc-flowable</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
