--- a/shahenpc-admin/src/main/resources/application-local.yml
+++ b/shahenpc-admin/src/main/resources/application-local.yml
@@ -16,13 +16,16 @@ ruoyi:
     captchaType: math
 # 数据源配置
 spring:
+    jackson:
+        date-format: yyyy-MM-dd HH:mm:ss
+        time-zone: GMT+8
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.cj.jdbc.Driver
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://192.168.0.13:3306/cy_shahenpc?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                url: jdbc:mysql://192.168.0.13:3306/cy_shahenpc?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true
                 username: root
                 password: root
             # 从库数据源
