--- a/shahenpc-admin/pom.xml
+++ b/shahenpc-admin/pom.xml
@@ -65,7 +65,22 @@
             <groupId>com.shahenpc</groupId>
             <artifactId>shahenpc-flowable</artifactId>
         </dependency>
-		
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.huaweicloud</groupId>
+            <artifactId>esdk-obs-java</artifactId>
+            <version>3.22.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
     </dependencies>
 
     <build>
