--- a/shahenpc-admin/pom.xml
+++ b/shahenpc-admin/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.63</version>
+        </dependency>
     </dependencies>
 
     <build>
