--- a/shahenpc-admin/src/main/resources/application-local.yml
+++ b/shahenpc-admin/src/main/resources/application-local.yml
@@ -14,6 +14,23 @@ ruoyi:
     addressEnabled: false
     # 验证码类型 math 数组计算 char 字符验证
     captchaType: math
+# 开发环境配置
+server:
+    # 服务器的HTTP端口，默认为8080
+    port: 8080
+    servlet:
+        # 应用的访问路径
+        context-path: /
+    tomcat:
+        # tomcat的URI编码
+        uri-encoding: UTF-8
+        # 连接数满后的排队数，默认为100
+        accept-count: 1000
+        threads:
+            # tomcat最大线程数，默认为200
+            max: 800
+            # Tomcat启动初始化的线程数，默认值10
+            min-spare: 100
 # 数据源配置
 spring:
     jackson:
