--- a/shahenpc-flowable/pom.xml
+++ b/shahenpc-flowable/pom.xml
@@ -90,8 +90,27 @@
 			<artifactId>aviator</artifactId>
 			<version>5.3.1</version>
 		</dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel-core</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-json-converter</artifactId>
+            <version>6.7.2</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 <!--	<build>-->
 <!--		<plugins>-->
